--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -18,19 +18,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
-    "from vehicle import Vehicle, State, Control\n",
-    "from utils import circular_trajectory, stadium_trajectory, show_animation\n",
-    "from pid import PidController, PidPathFollower\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.animation import ArtistAnimation\n",
-    "from matplotlib.lines import Line2D\n",
-    "from IPython import display\n",
-    "\n",
-    "from tqdm.notebook import tqdm"
+    "from pid import PidPathFollower\n",
+    "from utils import circular_trajectory, show_animation, stadium_trajectory, plot_trajectory\n",
+    "from vehicle import Control, State, Vehicle"
    ]
   },
   {
@@ -43,16 +38,12 @@
     "vehicle = Vehicle()\n",
     "states = [vehicle.state.copy()]\n",
     "\n",
-    "num_steps = 100    \n",
+    "num_steps = 100\n",
     "for i in range(num_steps):\n",
-    "    states.append(vehicle.update(u={\"steer\": 0.6 * np.sin(i/3.0) + 0.2, \"accel\": 2.2 * np.sin(i/10.0)}))\n",
+    "    states.append(vehicle.update(u={\"steer\": 0.3 * np.sin(i / 3.0) + 0.2, \"accel\": 2 * np.sin(i / 10.0)}))\n",
     "\n",
-    "df = pd.DataFrame(states)\n",
-    "plt.plot(df[\"x\"], df[\"y\"]);\n",
-    "plt.axis(\"equal\");\n",
-    "\n",
-    "# show_animation(vehicle, interval_ms=delta_t*1000)\n",
-    "# vehicle.save_animation(\"vehicle.mp4\", interval=int(delta_t * 1000), movie_writer=\"ffmpeg\")"
+    "states = pd.DataFrame(states)\n",
+    "plot_trajectory(states=states)"
    ]
   },
   {
@@ -62,17 +53,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate(init_state: State, control_func, duration: float, dt: float):\n",
-    "    vehicle = Vehicle(init_state=init_state, dt=dt)\n",
+    "def simulate(init_state: State, control_func, duration: float, dt: float, max_steer, max_accel):\n",
+    "    vehicle = Vehicle(init_state=init_state, max_steer=max_steer, max_accel=max_accel, dt=dt)\n",
     "\n",
     "    states = [vehicle.state]\n",
     "    controls = [{\"steer\": 0.0, \"accel\": 0.0}]\n",
     "\n",
     "    num_steps = int(duration / dt)\n",
     "    for _ in tqdm(range(num_steps)):\n",
-    "        control: Control = control_func(vehicle.state)\n",
+    "        try:\n",
+    "            control: Control = control_func(vehicle.state)\n",
+    "        except ValueError as e:\n",
+    "            print(e)\n",
+    "            break\n",
+    "\n",
     "        state = vehicle.update(control)\n",
-    "        \n",
+    "\n",
     "        states.append(state)\n",
     "        controls.append(control)\n",
     "\n",
@@ -82,40 +78,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b00658e3-ff73-4277-8eea-615484acc60a",
+   "id": "85ae0f93-8585-4f5f-bb61-0748dac9b526",
    "metadata": {},
    "outputs": [],
    "source": [
-    "duration = 100\n",
-    "dt = 0.1\n",
+    "def normalize_angle(angle: float) -> float:\n",
+    "    \"\"\"\n",
+    "    Normalize an angle to the range [-pi, pi].\n",
     "\n",
-    "reference = circular_trajectory()\n",
-    "init_state = dict(reference.iloc[0])\n",
-    "init_state[\"v\"] = 0.0\n",
+    "    Args:\n",
+    "        angle (float): Angle in radians.\n",
     "\n",
-    "Kp_steer = 1.0\n",
-    "Ki_steer = 0.8\n",
-    "Kd_steer = 0.0\n",
+    "    Returns:\n",
+    "        float: Normalized angle in radians.\n",
+    "    \"\"\"\n",
+    "    return (angle + np.pi) % (2 * np.pi) - np.pi\n",
     "\n",
-    "Kp_accel = 0.4\n",
-    "Ki_accel = 0.0\n",
-    "Kd_accel = 0.0\n",
     "\n",
-    "pid_controller = PidPathFollower(reference, dt, Kp_steer, Ki_steer, Kd_steer, Kp_accel, Ki_accel, Kd_accel)\n",
-    "\n",
-    "states, controls = simulate(init_state, pid_controller, duration, dt)"
+    "for angle in range(0, 360, 10):\n",
+    "    angle = np.deg2rad(angle)\n",
+    "    print(angle, normalize_angle(angle))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b9a934c-df63-4f1e-b560-deba5a5e8a80",
+   "id": "b00658e3-ff73-4277-8eea-615484acc60a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(reference[\"x\"], reference[\"y\"])\n",
-    "plt.plot(states[\"x\"], states[\"y\"])\n",
-    "plt.axis(\"equal\");"
+    "duration = 250\n",
+    "dt = 0.1\n",
+    "\n",
+    "reference = stadium_trajectory()\n",
+    "# reference = circular_trajectory()\n",
+    "\n",
+    "init_state = dict(reference.iloc[0])\n",
+    "init_state[\"v\"] = 0.0\n",
+    "\n",
+    "Kp_steer = 3.0\n",
+    "Ki_steer = 0.1\n",
+    "Kd_steer = 0.3\n",
+    "max_steer = np.deg2rad(40)\n",
+    "\n",
+    "Kp_accel = 0.4\n",
+    "Ki_accel = 0.0\n",
+    "Kd_accel = 0.0\n",
+    "max_accel = 2.0\n",
+    "\n",
+    "pid_controller = PidPathFollower(\n",
+    "    reference,\n",
+    "    dt,\n",
+    "    Kp_steer,\n",
+    "    Ki_steer,\n",
+    "    Kd_steer,\n",
+    "    max_steer,\n",
+    "    Kp_accel,\n",
+    "    Ki_accel,\n",
+    "    Kd_accel,\n",
+    "    max_accel,\n",
+    ")\n",
+    "\n",
+    "states, controls = simulate(init_state, pid_controller, duration, dt, max_steer, max_accel)\n",
+    "\n",
+    "plot_trajectory(ref_traj=reference, states=states)"
    ]
   },
   {
@@ -125,7 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_animation(reference, states.iloc[::75], controls[::75], vehicle.max_steer_abs, vehicle.max_accel_abs, 100)"
+    "skip = 32\n",
+    "show_animation(reference, states.iloc[::skip], controls[::skip], vehicle.max_steer, vehicle.max_accel, dt * 1000)"
    ]
   },
   {
@@ -135,97 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "    # # --- Plotting Results ---\n",
-    "    # plt.style.use('seaborn-v0_8-darkgrid')\n",
-    "    # # Make the trajectory plot larger to better see the arrows\n",
-    "    # fig, axs = plt.subplots(6, 1, figsize=(10, 10), gridspec_kw={'height_ratios': [3, 1, 1, 1, 1, 1]})\n",
-    "\n",
-    "    # # Plot trajectory paths\n",
-    "    # axs[0].plot(ref_x, ref_y, 'r--', label=\"Reference Trajectory\")\n",
-    "    # axs[0].plot(x_hist, y_hist, 'b-', label=\"Vehicle Path\")\n",
-    "    \n",
-    "    # arrow_length = 2.0  # Visual length of the heading arrows\n",
-    "    \n",
-    "    # # Add arrows for reference heading\n",
-    "    # # We draw fewer arrows than data points to keep the plot clean\n",
-    "    # for i in range(0, len(ref_x), ARROW_SKIP):\n",
-    "    #     axs[0].arrow(ref_x[i], ref_y[i],\n",
-    "    #                  arrow_length * np.cos(ref_yaw[i]), arrow_length * np.sin(ref_yaw[i]),\n",
-    "    #                  head_width=0.8, head_length=1.0, fc='deeppink', ec='deeppink', alpha=0.7)\n",
-    "\n",
-    "    # # Add arrows for vehicle heading\n",
-    "    # for i in range(0, len(x_hist), ARROW_SKIP):\n",
-    "    #     axs[0].arrow(x_hist[i], y_hist[i],\n",
-    "    #                  arrow_length * np.cos(yaw_hist[i]), arrow_length * np.sin(yaw_hist[i]),\n",
-    "    #                  head_width=0.8, head_length=1.0, fc='black', ec='black', alpha=0.9)\n",
-    "\n",
-    "\n",
-    "    # axs[0].set_title(\"Vehicle Trajectory Following with Heading Arrows\")\n",
-    "    # axs[0].set_xlabel(\"X [m]\")\n",
-    "    # axs[0].set_ylabel(\"Y [m]\")\n",
-    "    \n",
-    "    # # Create a custom legend to represent paths and arrows\n",
-    "    # legend_elements = [Line2D([0], [0], color='r', linestyle='--', label='Reference Trajectory'),\n",
-    "    #                    Line2D([0], [0], marker='>', color='w', markerfacecolor='deeppink', markersize=10, label='Reference Heading'),\n",
-    "    #                    Line2D([0], [0], color='b', linestyle='-', label='Vehicle Path'),\n",
-    "    #                    Line2D([0], [0], marker='>', color='w', markerfacecolor='cyan', markersize=10, label='Vehicle Heading')]\n",
-    "    # axs[0].legend(handles=legend_elements)\n",
-    "    # axs[0].axis(\"equal\")\n",
-    "\n",
-    "    # # Plot velocity\n",
-    "    # axs[1].plot(time_hist, v_hist, label=\"Vehicle Speed\")\n",
-    "    # axs[1].plot(time_hist, [ref_v[np.argmin(np.hypot(ref_x - x, ref_y - y))] for x, y in zip(x_hist, y_hist)], 'r--', label=\"Target Speed\")\n",
-    "    # axs[1].set_title(\"Velocity Profile\")\n",
-    "    # axs[1].set_xlabel(\"Time [s]\")\n",
-    "    # axs[1].set_ylabel(\"Speed [m/s]\")\n",
-    "    # axs[1].legend()\n",
-    "\n",
-    "    # # Plot heading\n",
-    "    # axs[2].plot(time_hist, np.rad2deg(yaw_hist), label=\"Vehicle Heading\")\n",
-    "    # axs[2].plot(time_hist, np.rad2deg([ref_yaw[np.argmin(np.hypot(ref_x - x, ref_y - y))] for x, y in zip(x_hist, y_hist)]), 'r--', label=\"Target Heading\")\n",
-    "    # axs[2].set_title(\"Heading Profile\")\n",
-    "    # axs[2].set_xlabel(\"Time [s]\")\n",
-    "    # axs[2].set_ylabel(\"Heading [deg]\")\n",
-    "    # axs[2].legend()\n",
-    "\n",
-    "    # axs[3].plot(time_hist, steer_hist, label=\"Steering\")\n",
-    "    # axs[3].set_title(\"Steering\")\n",
-    "    # axs[3].set_xlabel(\"Time [s]\")\n",
-    "    # axs[3].legend()    \n",
-    "\n",
-    "    # axs[4].plot(time_hist, accel_hist, label=\"Acceleration\")\n",
-    "    # axs[4].set_title(\"Acceleration\")\n",
-    "    # axs[4].set_xlabel(\"Time [s]\")\n",
-    "    # axs[4].legend()    \n",
-    "\n",
-    "    # r, a, i, sin_val, hypot, dx, dy, cte, ang_err = zip(*debug_values)\n",
-    "    # max_val = 1000#100*np.pi\n",
-    "    # min_val = -max_val\n",
-    "    # axi = 5\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(r, min_val, max_val), label='ang-ref')\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(a, min_val, max_val), label='ang-vehicle')\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(np.array(i)/len(ref_x), min_val, max_val), label='index')\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(sin_val, min_val, max_val), label='sin')\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(hypot, min_val, max_val), label='hypot')\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(dx, min_val, max_val), label='dx')\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(dy, min_val, max_val), label='dy')\n",
-    "    # axs[axi].plot(time_hist[1:], np.clip(cte, min_val, max_val), label='cte')\n",
-    "    # # axs[axi].plot(time_hist[1:], np.clip(ang_err, min_val, max_val), label='ang-err')\n",
-    "    # axs[axi].legend()\n",
-    "\n",
-    "    # plt.tight_layout()\n",
-    "    # plt.show()\n",
-    "    # return vehicle"
+    "controls[[\"accel\", \"steer\"]].plot();"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b052703-f68f-48c3-bf49-f5f7e8d08512",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
